--- a/Launcher/packages.config
+++ b/Launcher/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net452" />
   <package id="Microsoft.NetCore.Analyzers" version="2.9.3" targetFramework="net452" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.9.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="R.NET.Community" version="1.6.5" targetFramework="net452" />
   <package id="RabbitMQ.Client" version="5.1.2" targetFramework="net452" />
   <package id="StringInterpolationBridgeStrong" version="0.9.1" targetFramework="net452" />
